methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: value blanc is not a member of object java.awt.Color
  var couleur:Color=Color.blanc
                          ^