methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var couleur:Color=Color.blanc
  if(estFaceMur()){
    return false
  } else {
    avance()
    couleur=getCouleurSol()
    recule()
  }
  if (couleur==Color.green){
    return true
  } else {
    return false}
}